Implement cmd line argument rules (and rule validation when parsing cmd line arguments)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
         "**/.project": true,
         "**/.settings": true,
         "**/.factorypath": true
-    }
+    },
+    "java.completion.enabled": false,
+    "java.debug.settings.enableRunDebugCodeLens": false,
+    "java.home": "e:/apps/jdk11",
+    "java.dependency.syncWithFolderExplorer": false
 }
